<resources>
    <string name="app_name">ExploreXpert</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="logo_desc">App logo</string>
    <string name="map_desc">Map Placeholder</string>
    <string name="newsfeed_desc">News Feed Placeholder</string>
    <string name="menu_button_desc">Menu Button</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="filter_prompt">Select a filter</string>

    <string name="profile_picture_desc"> Profile Picture</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="place_photo" />
    <string name="title_activity_navigation">navigation</string>
    <string name="location_name_placeholder">Location Name Placeholder</string>
    <string name="rating_placeholder">Rating Placeholder</string>
    <string name="text_review_placeholder">Text review Placeholder</string>
    <string name="total_points">TOTAL POINTS</string>
    <string name="_0">0</string>
    <string name="username">Username</string>
    <string name="current_location">Current Location</string>
    <string name="my_points_and_achievement">My Points and Achievement</string>
    <string name="my_scavenger_hunts">My Scavenger Hunts</string>
    <string name="example_hunt_1">Example Hunt 1</string>
    <string name="example_hunt_2">Example Hunt 2</string>
    <string name="example_hunt_3">Example Hunt 3</string>
    <string name="past_scavenger_hunts">Past Scavenger Hunts</string>
    <string name="reviews">Reviews</string>
    <string name="drop_down_arrow">drop down arrow</string>
    <string name="edit_button">edit button</string>
    <string name="past_drop_down_arrow">past drop down arrow</string>
    <string name="up_arrow">up arrow</string>
    <string name="down_arrow">down arrow</string>
    <string name="my_scavenger_hunt" />
    <string name="current_hunt">Current Hunt</string>
    <string name="go_here">Go Here?</string>
    <string name="fun_fact_will_appear_here">Fun fact will appear here</string>
    <string name="yes_sign_me_up_i_would_like_to_receive_email_updates_from_explorexpert">Yes, sign me up. I would like to receive email updates from ExploreXpert!</string>
    <string name="check_this_box_to_receive_email_updates">Check this box to receive email updates</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="dob">DOB</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="forgot_your_info">FORGOT YOUR INFO?</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
</resources>