<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/locationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_name_placeholder"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_placeholder"
            android:textSize="18sp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/reviewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_review_placeholder"
            android:textSize="18sp"
            android:layout_gravity="center" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

