<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homescreen_activity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Banner -->
    <LinearLayout
        android:id="@+id/banner"
        android:layout_width="514dp"
        android:layout_height="101dp"
        android:background="#F25858"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <ImageView
        android:id="@+id/map"
        android:layout_width="747dp"
        android:layout_height="328dp"
        android:contentDescription="@string/map_desc"
        android:src="@drawable/map"
        app:layout_constraintBottom_toTopOf="@id/newsFeed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toSearch"
        app:layout_constraintVertical_bias="0.153" />

    <!-- Search Labels and Boxes -->
    <TextView
        android:id="@+id/fromLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="From"
        app:layout_constraintStart_toStartOf="@+id/toLabel"
        app:layout_constraintTop_toBottomOf="@id/banner" />

    <EditText
        android:id="@+id/toSearch"
        android:layout_width="366dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/textbox"
        android:hint="Enter To Location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="@+id/fromSearch"
        app:layout_constraintTop_toBottomOf="@id/fromSearch" />

    <TextView
        android:id="@+id/toLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:text="To"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fromSearch" />

    <EditText
        android:id="@+id/fromSearch"
        android:layout_width="369dp"
        android:layout_height="60dp"
        android:background="@drawable/textbox"
        android:hint="Enter From Location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fromLabel" />


    <!-- Button for Navigation -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/navigateButton"
        android:layout_width="239dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:padding="1dp"
        android:text="To the Destination"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/toSearch"
        app:layout_constraintTop_toBottomOf="@id/map" />

    <!-- News Feed -->
    <ImageView
        android:id="@+id/newsFeed"
        android:layout_width="336dp"
        android:layout_height="41dp"
        android:layout_marginTop="48dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/newsfeed_desc"
        android:scaleType="fitCenter"
        android:src="@drawable/newsfeed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navigateButton" />

    <ImageView
        android:id="@+id/menuButton"
        android:layout_width="70dp"
        android:layout_height="51dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:contentDescription="@string/menu_button_desc"
        android:focusable="true"
        android:src="@drawable/menuicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bannerLogo"
        android:layout_width="250dp"
        android:layout_height="123dp"
        android:contentDescription="@string/logo_desc"
        android:src="@drawable/headerlogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/banner"
        app:layout_constraintVertical_bias="0.2"
        android:layout_marginTop="-70dp"
        android:layout_marginLeft="10dp"
    />




</androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/menu_navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        app:menu="@menu/drawer_menu" />


</androidx.drawerlayout.widget.DrawerLayout>