<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Banner -->
    <LinearLayout
        android:id="@+id/banner"
        android:layout_width="514dp"
        android:layout_height="75dp"
        android:background="#F25858"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </LinearLayout>


    <ImageView
        android:id="@+id/menuButton"
        android:layout_width="50dp"
        android:layout_height="51dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="18dp"
        android:clickable="true"
        android:contentDescription="@string/menu_button_desc"
        android:focusable="true"
        android:src="@drawable/menuicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bannerLogo"
        android:layout_width="300dp"
        android:layout_height="133dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="-80dp"
        android:contentDescription="@string/logo_desc"
        android:src="@drawable/logoupdated"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/banner"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/loginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/bungeeshade"
        android:text="LOG IN"
        android:textColor="#000000"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/banner" />

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="152dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginBottom="152dp"
        android:contentDescription="@string/profile_picture_desc"
        android:src="@drawable/profilepic"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logoutButton"
        android:layout_width="238dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:background="@drawable/roundedbuttontwo"
        android:padding="1dp"
        android:text="Logout"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="238dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginTop="536dp"
        android:background="@drawable/rounded_button"
        android:padding="1dp"
        android:text="Login"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/banner" />

    <EditText
        android:id="@+id/password"
        android:layout_width="369dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/textbox"
        android:hint="Enter Your Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <EditText
        android:id="@+id/username"
        android:layout_width="369dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/textbox"
        android:hint="Enter Your Username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilePicture" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:text="Forgot Password?"
        android:textColor="#0000FF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.895" />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Create an Account"
        android:textColor="#0000FF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toEndOf="@+id/forgotPassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936" />

</androidx.constraintlayout.widget.ConstraintLayout>
